--- a/templates/detail.html
+++ b/templates/detail.html
@@ -93,7 +93,7 @@
 
                 <table class="table table-striped table-bordered table-condensed table-responsive">
                     <thead>
-                    <tr class="row mx-0" >
+                    <tr class="row" >
                         <td class="col-md-1">工单编码</td>
                         <td class="col-md-1">处理环节</td>
                         <td class="col-md-3">工单处理结果</td>
