--- a/templates/detail.html
+++ b/templates/detail.html
@@ -76,9 +76,9 @@
                     <tr>
                         <td>Z端长途类型：</td>
                         <td>{{ returned4.szcttype.text }}</td>
-                        <td>z端数字电路速率：</td>
+                        <td>Z端数字电路速率：</td>
                         <td>{{ returned4.szdigelerate.text }}</td>
-                        <td>z端数字电路接口类型：</td>
+                        <td>Z端数字电路接口类型：</td>
                         <td>{{ returned4.szdigeleporttype.text }}</td>
                     </tr>
                 </table>
